--- a/index.html
+++ b/index.html
@@ -2,53 +2,68 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Drag Papers ❤️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=5.0, user-scalable=yes">
+  <title>Maan Ja</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- A pen by Developer Rahul  -->
-<div class="paper heart">
 
+  <div class="paper">
+    <p>HEHE..Maan ja..</p>
+    <p> 😗👉🏼👈🏼</p>
+    </div>
+
+<div class="paper image">
+  <img src="images/4.png" style="padding-top: 20px; padding-left: 40px; width: 80%;"/>
+  <p> Sayd khudse draw krke....😬</p>
 </div>
 
+<div class="paper">
+  <p>Par abhi flowers</p>
+  <p> kaise du?</p>
+  </div>
+
+<div class="paper">
+  <p>Tab to manana</p>
+  <p> parega... 😗</p>
+  </div>
   
 <div class="paper image">
-  <p> and I fallen in</p>
-    <p>Love with You 😍 </p>
-   <img src="images/1.jpeg" />
+  <img src="images/1.png" />
+  <p> Yaa intaaaa...? 🙂</p>
 </div>
 
 <div class="paper image">
-  <p</p>
-  <img src="images/2.jpeg" />
+
+  <img src="images/2.png" />
+  <p>Itnaaa...? 😰</p>
 </div>
 
 <div class="paper image">
-  <p>How can be </p>
-   <p> someone so cute ❤️ </p>
+  <img src="images/3.png"/>
+  <p>Itna...? 😳</p>
 
-  <img src="images/3.jpg" />
 </div>
 
 
 
 <div class="paper red">
-<p class="p1"> and My Favorite</p>
-<p class="p2">Person 😍</p>
+<p> Kitna gussa hai..?</p>
+<p> hmmmm.. 🤔</p>
 </div>
 
 <div class="paper">
-<p class="p1">You are Cute </p>
-  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+<p >Maine suna tu</p>
+<p> gussa hai... 👀</p>
+  <!-- <p >Amazing <span style="color: red !important;">❤️</span></p> -->
 </div>
 
 <div class="paper">
-<p class="p1">Drag the papers to move!</p>
+<p class="p1">HEY SOOJI !</p>
 </div>
-<!-- partial -->
-  <script  src="./mobile.js"></script>
+
+<script  src="./mobile.js"></script>
 
 </body>
 </html>
